# lightweight_monorepo_python_project_template

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  lightweight_template_implementation_guide.md  python_lightweight_template_review_fixes.md
.claude/rules/: testing.md
.codex/rules/: architecture.md  frontend-conventions.md  templates.md
.cursor/rules/: backend-conventions.md  templates.md
backend/: .env.example  pyproject.toml
backend/src/: __init__.py  config.py  db.py  main.py
backend/src/api/: health.py
backend/src/repositories/: README.md  __init__.py
backend/src/schemas/: __init__.py
backend/src/services/: health_service.py
backend/tests/: test_health_api.py  test_health_service.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/lib/: api.ts
openspec/changes/archive/2026-07-02-template-clarity-fixes/: design.md  proposal.md  tasks.md
openspec/changes/lightweight-python-template/: design.md  proposal.md  tasks.md
openspec/changes/lightweight-python-template/specs/agent-conventions/: spec.md
openspec/changes/lightweight-python-template/specs/dev-environment/: spec.md
openspec/changes/lightweight-python-template/specs/frontend-scaffold/: spec.md
openspec/changes/lightweight-python-template/specs/github-template-publish/: spec.md
openspec/specs/agent-rules/: spec.md
openspec/specs/documentation-consistency/: spec.md
openspec/specs/template-cleanup/: spec.md
openspec/specs/template-governance/: spec.md
(+5 files in other folders)
